Adding settings, Moved resource files to /resources

--- a/manifest.json
+++ b/manifest.json
@@ -13,14 +13,14 @@
     ],
 
     "web_accessible_resources": [
-        "effective_tld_names.dat"
+        "resources/effective_tld_names.dat"
     ],
 
     "background": {
         "scripts": [
-            "jquery-2.1.1.min.js",
-            "punycode.js",
-            "publicsuffixlist.js",
+            "resources/jquery-2.1.1.min.js",
+            "resources/punycode.js",
+            "resources/publicsuffixlist.js",
             "listener.js"
         ]
     },
